--- a/index.scss
+++ b/index.scss
@@ -91,10 +91,10 @@ $body-color:    $gray-dark !default;
 //
 // Style anchor elements.
 
-$link-color:            $brand-primary !default;
+$link-color:            $brand-primary;
 $link-decoration:       none !default;
 $link-hover-color:      darken($link-color, 15%) ;
-$link-hover-decoration: underline !default;
+$link-hover-decoration: underline ;
 
 // Fonts
 //
