--- a/index.css
+++ b/index.css
@@ -94,10 +94,10 @@ a.badge:hover {
     background-color: #4b5257; }
 
 .badge-primary {
-  background-color: #0275d8; }
+  background-color: #5182d1; }
   .badge-primary[href]:focus,
   .badge-primary[href]:hover {
-    background-color: #025aa5; }
+    background-color: #3267bd; }
 
 .badge-success {
   background-color: #5cb85c; }
@@ -298,7 +298,7 @@ a.badge:hover {
   .btn:focus,
   .btn.focus {
     outline: 0;
-    box-shadow: 0 0 0 2px rgba(2, 117, 216, 0.25); }
+    box-shadow: 0 0 0 2px rgba(81, 130, 209, 0.25); }
   .btn.disabled,
   .btn:disabled {
     cursor: not-allowed;
@@ -313,26 +313,26 @@ fieldset[disabled] a.btn {
 
 .btn-primary {
   color: #fff;
-  background-color: #0275d8;
-  border-color: #0275d8; }
+  background-color: #5182d1;
+  border-color: #5182d1; }
   .btn-primary:hover {
     color: #fff;
-    background-color: #025aa5;
-    border-color: #01549b; }
+    background-color: #3267bd;
+    border-color: #3063b5; }
   .btn-primary:focus,
   .btn-primary.focus {
-    box-shadow: 0 0 0 2px rgba(2, 117, 216, 0.5); }
+    box-shadow: 0 0 0 2px rgba(81, 130, 209, 0.5); }
   .btn-primary.disabled,
   .btn-primary:disabled {
-    background-color: #0275d8;
-    border-color: #0275d8; }
+    background-color: #5182d1;
+    border-color: #5182d1; }
   .btn-primary:active,
   .btn-primary.active,
   .show > .btn-primary.dropdown-toggle {
     color: #fff;
-    background-color: #025aa5;
+    background-color: #3267bd;
     background-image: none;
-    border-color: #01549b; }
+    border-color: #3063b5; }
 
 .btn-secondary {
   color: #292b2c;
@@ -450,27 +450,27 @@ fieldset[disabled] a.btn {
     border-color: #c12e2a; }
 
 .btn-outline-primary {
-  color: #0275d8;
+  color: #5182d1;
   background-color: transparent;
   background-image: none;
-  border-color: #0275d8; }
+  border-color: #5182d1; }
   .btn-outline-primary:hover {
     color: #fff;
-    background-color: #0275d8;
-    border-color: #0275d8; }
+    background-color: #5182d1;
+    border-color: #5182d1; }
   .btn-outline-primary:focus,
   .btn-outline-primary.focus {
-    box-shadow: 0 0 0 2px rgba(2, 117, 216, 0.5); }
+    box-shadow: 0 0 0 2px rgba(81, 130, 209, 0.5); }
   .btn-outline-primary.disabled,
   .btn-outline-primary:disabled {
-    color: #0275d8;
+    color: #5182d1;
     background-color: transparent; }
   .btn-outline-primary:active,
   .btn-outline-primary.active,
   .show > .btn-outline-primary.dropdown-toggle {
     color: #fff;
-    background-color: #0275d8;
-    border-color: #0275d8; }
+    background-color: #5182d1;
+    border-color: #5182d1; }
 
 .btn-outline-secondary {
   color: #ccc;
@@ -589,7 +589,7 @@ fieldset[disabled] a.btn {
 
 .btn-link {
   font-weight: normal;
-  color: #0275d8;
+  color: #5182d1;
   border-radius: 0; }
   .btn-link,
   .btn-link:active,
@@ -604,7 +604,7 @@ fieldset[disabled] a.btn {
     border-color: transparent; }
   .btn-link:focus,
   .btn-link:hover {
-    color: #014c8c;
+    color: #2d5ca9;
     text-decoration: underline;
     background-color: transparent; }
   .btn-link:disabled {
@@ -699,8 +699,8 @@ input[type="button"].btn-block {
   margin-left: -0.625rem; }
 
 .card-primary {
-  background-color: #0275d8;
-  border-color: #0275d8; }
+  background-color: #5182d1;
+  border-color: #5182d1; }
   .card-primary .card-header,
   .card-primary .card-footer {
     background-color: transparent; }
@@ -735,7 +735,7 @@ input[type="button"].btn-block {
 
 .card-outline-primary {
   background-color: transparent;
-  border-color: #0275d8; }
+  border-color: #5182d1; }
 
 .card-outline-secondary {
   background-color: transparent;
@@ -1080,12 +1080,12 @@ pre {
   opacity: 0; }
   .custom-control-input:checked ~ .custom-control-indicator {
     color: #fff;
-    background-color: #0275d8; }
+    background-color: #5182d1; }
   .custom-control-input:focus ~ .custom-control-indicator {
-    box-shadow: 0 0 0 1px #fff, 0 0 0 3px #0275d8; }
+    box-shadow: 0 0 0 1px #fff, 0 0 0 3px #5182d1; }
   .custom-control-input:active ~ .custom-control-indicator {
     color: #fff;
-    background-color: #8fcafe; }
+    background-color: #dee7f6; }
   .custom-control-input:disabled ~ .custom-control-indicator {
     cursor: not-allowed;
     background-color: #eceeef; }
@@ -1114,7 +1114,7 @@ pre {
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3E%3Cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3E%3C/svg%3E"); }
 
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-indicator {
-  background-color: #0275d8;
+  background-color: #5182d1;
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 4'%3E%3Cpath stroke='%23fff' d='M0 2h4'/%3E%3C/svg%3E"); }
 
 .custom-radio .custom-control-indicator {
@@ -1145,7 +1145,7 @@ pre {
   border-radius: 0.25rem;
   appearance: none; }
   .custom-select:focus {
-    border-color: #5cb3fd;
+    border-color: #b6caec;
     outline: none; }
     .custom-select:focus::-ms-value {
       color: #464a4c;
@@ -1274,7 +1274,7 @@ pre {
   .dropdown-item:active {
     color: #fff;
     text-decoration: none;
-    background-color: #0275d8; }
+    background-color: #5182d1; }
   .dropdown-item.disabled,
   .dropdown-item:disabled {
     color: #636c72;
@@ -1335,7 +1335,7 @@ pre {
   .form-control:focus {
     color: #464a4c;
     background-color: #fff;
-    border-color: #5cb3fd;
+    border-color: #b6caec;
     outline: none; }
   .form-control::placeholder {
     color: #636c72;
@@ -2565,8 +2565,8 @@ select.form-control-lg:not([size]):not([multiple]), .input-group-lg > select.for
   .list-group-item.active {
     z-index: 2;
     color: #fff;
-    background-color: #0275d8;
-    border-color: #0275d8; }
+    background-color: #5182d1;
+    border-color: #5182d1; }
 
 .list-group-flush .list-group-item {
   border-right: 0;
@@ -2806,7 +2806,7 @@ button.list-group-item-danger {
 .nav-pills .nav-link.active,
 .nav-pills .nav-item.show .nav-link {
   color: #fff;
-  background-color: #0275d8; }
+  background-color: #5182d1; }
 
 .nav-fill .nav-item {
   flex: 1 1 auto;
@@ -3113,8 +3113,8 @@ button.list-group-item-danger {
 .page-item.active .page-link {
   z-index: 2;
   color: #fff;
-  background-color: #0275d8;
-  border-color: #0275d8; }
+  background-color: #5182d1;
+  border-color: #5182d1; }
 
 .page-item.disabled .page-link {
   color: #636c72;
@@ -3129,12 +3129,12 @@ button.list-group-item-danger {
   padding: 0.5rem 0.75rem;
   margin-left: -1px;
   line-height: 1.25;
-  color: #0275d8;
+  color: #5182d1;
   background-color: #fff;
   border: 1px solid #ddd; }
   .page-link:focus,
   .page-link:hover {
-    color: #014c8c;
+    color: #2d5ca9;
     text-decoration: none;
     background-color: #eceeef;
     border-color: #ddd; }
@@ -3171,7 +3171,7 @@ button.list-group-item-danger {
   display: block;
   max-width: 276px;
   padding: 1px;
-  font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+  font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Nunito";
   font-style: normal;
   font-weight: normal;
   line-height: 1.5;
@@ -3381,7 +3381,7 @@ button.list-group-item-danger {
   height: 1rem;
   line-height: 1rem;
   color: #fff;
-  background-color: #0275d8; }
+  background-color: #5182d1; }
 
 .progress-bar-striped {
   background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
@@ -3409,7 +3409,7 @@ html {
 
 body {
   margin: 0;
-  font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+  font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Nunito";
   font-size: 1rem;
   font-weight: normal;
   line-height: 1.5;
@@ -3490,12 +3490,12 @@ sup {
   top: -.5em; }
 
 a {
-  color: #0275d8;
+  color: #5182d1;
   text-decoration: none;
   background-color: transparent;
   -webkit-text-decoration-skip: objects; }
   a:hover {
-    color: #014c8c;
+    color: #2d5ca9;
     text-decoration: underline; }
 
 a:not([href]):not([tabindex]) {
@@ -3819,7 +3819,7 @@ template {
   position: absolute;
   z-index: 1070;
   display: block;
-  font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+  font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Nunito";
   font-style: normal;
   font-weight: normal;
   line-height: 1.5;
@@ -4055,11 +4055,11 @@ mark,
   background-color: #f7f7f7; }
 
 .bg-primary {
-  background-color: #0275d8 !important; }
+  background-color: #5182d1 !important; }
 
 a.bg-primary:focus,
 a.bg-primary:hover {
-  background-color: #025aa5 !important; }
+  background-color: #3267bd !important; }
 
 .bg-success {
   background-color: #5cb85c !important; }
@@ -5950,11 +5950,11 @@ a.text-muted:hover {
   color: #4b5257 !important; }
 
 .text-primary {
-  color: #0275d8 !important; }
+  color: #5182d1 !important; }
 
 a.text-primary:focus,
 a.text-primary:hover {
-  color: #025aa5 !important; }
+  color: #3267bd !important; }
 
 .text-success {
   color: #5cb85c !important; }
@@ -6015,7 +6015,7 @@ body > * {
 
 .navbar-nav {
   font-family: 'Nunito', sans-serif !important;
-  color: red !important; }
+  color: #5182d1 !important; }
 
 a:hover {
   color: #dbdbdb !important; }
