--- a/index.scss
+++ b/index.scss
@@ -95,7 +95,7 @@ $body-color:    $gray-dark !default;
 $link-color:            $brand-primary;
 $link-decoration:       none !default;
 $link-hover-color:      darken($link-color, 15%) ;
-$link-hover-decoration: underline ;
+$link-hover-decoration: none ;
 
 // Fonts
 //
@@ -170,6 +170,4 @@ a{
 a:hover{
 	color: #dbdbdb !important;
 }
-li{
 
-}
