Commit from Pingendo

--- a/index.scss
+++ b/index.scss
@@ -166,6 +166,7 @@ body > * {
 a{
 	font-family: 'Nunito', sans-serif !important;
   color: #5182d1 !important;
+  style:none;
 }
 a:hover{
 	color: #dbdbdb !important;
